<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:shortcutId="restart_launcher"
        android:shortcutLongLabel="@string/shortcut_restart_launcher_long"
        android:shortcutShortLabel="@string/shortcut_restart_launcher_short">
        <intent
            android:action="com.wizpizz.onepluspluslauncher.action.RESTART_LAUNCHER"
            android:targetClass="com.wizpizz.onepluspluslauncher.ui.activity.MainActivity"
            android:targetPackage="com.wizpizz.onepluspluslauncher" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutId="open_settings"
        android:shortcutLongLabel="@string/shortcut_open_settings_long"
        android:shortcutShortLabel="@string/shortcut_open_settings_short">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.wizpizz.onepluspluslauncher.ui.activity.MainActivity"
            android:targetPackage="com.wizpizz.onepluspluslauncher" />
    </shortcut>
</shortcuts>
